# saas

./: .env.example  .gitignore  Cargo.toml  Makefile
crates/auth-core/: Cargo.toml
crates/auth-core/src/: extractor.rs  jwt.rs  lib.rs  rbac.rs  revocation.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  middleware.rs  pagination.rs  response.rs  tracing_setup.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  migrate.rs  pool.rs  test_helpers.rs
crates/nats-bus/: Cargo.toml
crates/nats-bus/src/: client.rs  envelope.rs  lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: address.rs  erp.rs  events.rs  hcm.rs  lib.rs  money.rs  scm.rs
deployments/: docker-compose.yml
deployments/docker/: Dockerfile.service
frontend/: Cargo.toml
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/components/: auth_guard.rs  data_table.rs  form.rs  layout.rs  mod.rs  modal.rs  nav.rs  sidebar.rs
frontend/src/pages/: dashboard.rs  login.rs  mod.rs
frontend/src/pages/erp/: assets.rs  cash.rs  ledger.rs  mod.rs  payables.rs  receivables.rs
frontend/src/pages/hcm/: benefits.rs  department_list.rs  employee_detail.rs  employee_list.rs  mod.rs  payroll.rs  recruiting.rs  timesheet.rs
frontend/src/pages/scm/: inventory.rs  manufacturing.rs  mod.rs  orders.rs  procurement.rs
frontend/src/server/: mod.rs
frontend/src/state/: auth.rs
frontend/style/: main.css
services/config-svc/: Cargo.toml
services/config-svc/migrations/: 001_create_config.sql
services/config-svc/src/: main.rs  routes.rs
services/config-svc/src/events/: mod.rs
services/config-svc/src/handlers/: mod.rs
services/config-svc/src/models/: mod.rs
services/config-svc/src/repository/: mod.rs
services/config-svc/src/service/: mod.rs
services/erp/accounts-payable/: Cargo.toml
services/erp/accounts-payable/migrations/: 001_create_vendors.sql  002_create_ap_invoices.sql  003_create_ap_invoice_lines.sql  004_create_payments.sql  005_create_tax_codes.sql  006_add_tax_amount_to_invoices.sql  007_create_closed_periods.sql
services/erp/accounts-payable/src/: main.rs  routes.rs
services/erp/accounts-receivable/: Cargo.toml
services/erp/accounts-receivable/migrations/: 001_create_customers.sql  002_create_ar_invoices.sql  003_create_ar_invoice_lines.sql  004_create_receipts.sql  005_create_credit_memos.sql  006_add_approved_status.sql
services/erp/accounts-receivable/src/: main.rs  routes.rs
services/erp/accounts-receivable/src/events/: mod.rs
services/erp/accounts-receivable/src/handlers/: mod.rs
services/erp/accounts-receivable/src/models/: mod.rs
services/erp/accounts-receivable/src/repository/: mod.rs
services/erp/accounts-receivable/src/service/: mod.rs
services/erp/cash-management/: Cargo.toml
services/erp/cash-management/migrations/: 001_create_bank_accounts.sql  002_create_bank_transactions.sql  003_create_reconciliations.sql  004_add_flow_category.sql
services/erp/cash-management/src/: main.rs  routes.rs
services/erp/expense-mgmt/: Cargo.toml
services/erp/expense-mgmt/migrations/: 001_create_expense_categories.sql  002_create_expense_reports.sql  003_create_expense_lines.sql  004_create_per_diems.sql  005_create_mileage.sql  006_add_gl_account_code.sql
services/erp/expense-mgmt/src/: main.rs  routes.rs
services/erp/fixed-assets/: Cargo.toml
services/erp/fixed-assets/migrations/: 001_create_assets.sql  002_create_depreciation.sql
services/erp/fixed-assets/src/: main.rs  routes.rs
services/erp/fixed-assets/src/events/: mod.rs
services/erp/fixed-assets/src/handlers/: mod.rs
services/erp/fixed-assets/src/models/: mod.rs
services/erp/fixed-assets/src/repository/: mod.rs
services/erp/fixed-assets/src/service/: mod.rs
services/erp/general-ledger/: Cargo.toml
services/erp/general-ledger/migrations/: 001_create_accounts.sql  002_create_periods.sql  003_create_journal_entries.sql  004_create_journal_lines.sql  005_create_budgets.sql  006_create_budget_lines.sql  007_add_reversal_of.sql
services/erp/general-ledger/src/: main.rs  routes.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs  proxy.rs  rate_limit.rs  routes.rs
services/hcm/benefits/: Cargo.toml
services/hcm/benefits/migrations/: 001_create_plans.sql  002_create_enrollments.sql
services/hcm/benefits/src/: main.rs  routes.rs
services/hcm/employee/: Cargo.toml
services/hcm/employee/migrations/: 001_create_departments.sql  002_create_employees.sql  003_create_employment_history.sql
services/hcm/payroll/: Cargo.toml
services/hcm/performance/: Cargo.toml
services/hcm/performance/migrations/: 001_create_review_cycles.sql  002_create_goals.sql  003_create_review_assignments.sql  004_create_feedback.sql
services/hcm/performance/src/: main.rs  routes.rs
services/hcm/performance/src/events/: mod.rs
services/hcm/performance/src/handlers/: mod.rs
services/hcm/performance/src/models/: mod.rs
services/hcm/performance/src/repository/: mod.rs
services/hcm/performance/src/service/: mod.rs
services/hcm/recruiting/: Cargo.toml
services/hcm/time-labor/: Cargo.toml
services/iam/: Cargo.toml
services/iam/migrations/: 001_create_users.sql  002_create_roles.sql  003_create_permissions.sql  004_create_user_roles.sql  005_create_role_permissions.sql  006_create_revoked_tokens.sql
services/iam/src/: main.rs  routes.rs
services/scm/inventory/: Cargo.toml
services/scm/manufacturing/: Cargo.toml
services/scm/manufacturing/migrations/: 001_create_work_orders.sql  002_create_bom.sql  003_create_bom_components.sql  004_create_routing_steps.sql
services/scm/manufacturing/src/: main.rs  routes.rs
services/scm/manufacturing/src/events/: mod.rs
services/scm/manufacturing/src/handlers/: mod.rs
services/scm/manufacturing/src/models/: bom.rs  mod.rs  routing_step.rs  work_order.rs
services/scm/manufacturing/src/repository/: bom_repo.rs  mod.rs  routing_step_repo.rs  work_order_repo.rs
services/scm/manufacturing/src/service/: manufacturing_service.rs  mod.rs
services/scm/order-management/: Cargo.toml
services/scm/procurement/: Cargo.toml
(+155 files in other folders)
