[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/auth-core",
    "crates/db",
    "crates/nats-bus",
    "crates/proto",
    "services/gateway",
    "services/iam",
    "services/config-svc",
    "services/hcm/employee",
    "services/hcm/payroll",
    "services/hcm/benefits",
    "services/hcm/performance",
    "services/hcm/time-labor",
    "services/hcm/recruiting",
    "services/erp/general-ledger",
    "services/erp/accounts-payable",
    "services/erp/accounts-receivable",
    "services/erp/fixed-assets",
    "services/erp/cash-management",
    "services/erp/expense-mgmt",
    "services/scm/inventory",
    "services/scm/procurement",
    "services/scm/order-management",
    "services/scm/manufacturing",
    "frontend",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
rust-version = "1.80"
publish = false

[workspace.dependencies]
# Internal crates
saas-common       = { path = "crates/common" }
saas-auth-core    = { path = "crates/auth-core" }
saas-db           = { path = "crates/db" }
saas-nats-bus     = { path = "crates/nats-bus" }
saas-proto        = { path = "crates/proto" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# NATS
async-nats = "0.37"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }

# HTTP client (gateway proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Leptos
leptos = "0.7"
leptos_axum = "0.7"
leptos_router = "0.7"
leptos_meta = "0.7"
