[package]
name = "saas-auth-core"
version.workspace = true
edition.workspace = true

[dependencies]
saas-common = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
