[package]
name = "saas-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "saas-gateway"
path = "src/main.rs"

[dependencies]
saas-common = { workspace = true }
saas-auth-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
